# Digital-Signal-Processing

DSP/DSP Matlab Assignment 1/: problemone.m  secondC.m  secondone.m  spplot.m  waveform.m
DSP/DSP Matlab Assignment 2/: PublishExample.m
DSP/DSP Matlab Assignment 3/SUHAIL_MATLAB_CODE/: FrequencyMasking.m  FrequencyResolution.m  Windowing.m
DSP/ML1/: m1.txt
DSP/ML2/: ML2_axl3738.m  m2.txt
DSP/Project 1/: BWV847.mat  MLProject1.txt  README-BETA.txt
DSP/Project 1/Voices-Data/: BWV1080.mat  BWV847_Fugue_C_minor.mat  BWV847_Prelude_C_minor.mat  Bach_Great_Fugue_Gminor.mat  Bad_Romance.mat  Black_Magic_Woman.mat  Bohemian_Rapsody.mat  Davy_Jones.mat  He_s_a_Pirate11.mat  Hes_A_Pirate.mat  Hes_a_Pirate_Sax_Group.mat  Hes_a_Pirate_quartet.mat  Hotel_California.mat  Hotel_California_0.mat  Hotel_California_1.mat  Hotel_California_2.mat  Jesu.mat  Libertango.mat  Little_Fugue.mat  Oye_Como_Va.mat  Stairway_To_Heaven_Wind_Ensemble.mat  The_Legend_of_Zelda_Medley.mat  Turret_Opera_Cara_Mia.mat  hanon1.mat  postal_service-such_great_heights.mat
DSP/Project 1/code/: BWV847_Fugue2_Cminor.mat  README.txt  coscos.m  envelope.m  getTheVoices.m  key2notejt.m  key2notewt.m  play_scale.m  set_midi.m  setmlab.m  syn_sin.m  synthandplay.m
DSP/Project 2/: FINALREPORT.docx
DSP/Project 2/code/: README.txt  nsp0.mat  nsp1.mat  nsp3.mat  signals.m
DSP/Project 2/signals/: HighFilterWave1.mat  nsp2.mat  (+5 more)
DSP/spfirst/: spplot.m
DSP/spfirst/miscellaneous-1.2.1/src/: Makefile  bootstrap  cell2cell.cc  configure  configure.ac  partint.cc  partint.h  sample.cc  text_waitbar.cc
(+10 files in other folders)
